@startuml "architecture"

top to bottom direction
skinparam packageStyle rect
allow_mixing

' Draw polyline arrows
skinparam linetype polyline

' Snake-game-inspired color palette
skinparam backgroundColor #FAFAFA
skinparam shadowing false

' Arrow styling (blue-ish arrows, green-ish font)
skinparam ArrowColor #0D47A1
skinparam ArrowThickness 2
skinparam ArrowFontColor #1B5E20

' Package styling (light blue backgrounds)
skinparam package {
  BackgroundColor #BBDEFB
  BorderColor #0D47A1
  FontColor #1B5E20
}

' Class styling (white with blue borders)
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #0D47A1
  FontColor #212121
}

' ----------------------------
' Noodle Package
' ----------------------------
package "Noodle Package" {
  package "Model" {
    class GameLogic
    class GameState
    class Snake
    class Fruit
    class Direction
    class Cell

    GameLogic --> GameState
    GameLogic --> Snake
    GameLogic --> Fruit
    GameLogic --> Direction
    GameLogic --> Cell

    Snake --> Direction
    Snake --> Cell

    Fruit --> Cell
  }

  package "View" {
    class GameRenderer
    class Colors

    GameRenderer --> Colors
  }

  package "Controller" {
    class GameController
  }
}

' ----------------------------
' Neural Package
' ----------------------------
package "Neural Package" {
  component train_model

  package visualizations {
    class TrainingPlotter
    class TrainingRenderer
  }

  package environment {
    class RewardPolicy

    interface GymnasiumEnv
    class SnakeGameEnv implements GymnasiumEnv
  }

  package qnet {
    class QModel
    class QAgent

    QAgent --> QModel
  }
}

' ----------------------------
' Noodle Package Dependencies
' ----------------------------
Controller --> Model
Controller --> View
View --> Model

' ----------------------------
' Neural Package Dependencies
' ----------------------------
train_model --> visualizations
train_model --> environment
train_model --> qnet

environment --> visualizations
environment --> Model
environment --> View

visualizations --> View

@enduml
